# Sawt

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  requirements.txt  run_sawt.sh
Core/execution/: agent.py  agent_s_runner.py  simple_automation.py  speech_to_text.py  text_to_speech.py  voice_bridge.py
Core/input/: whisper_backend.cpp
Core/input/automation/: Cargo.toml  build.rs
Core/input/interface/: wrapper.cpp
backend/: AGENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  download_model.py  env.example  main.py  requirements.txt  run.py  server.py  start.py
backend/app/: websocket_handler.py
backend/app/repositories/: agent_repository.py  transcription_repository.py  tts_repository.py
backend/configs/: ai_config.py  speech_config.py
backend/layers/: __init__.py
backend/whispercpp/app/: Cargo.toml  build.rs
backend/whispercpp/app/src/: main.rs
backend_old/: requirements.txt  run.py  server.py
backend_old/app/: websocket_handler.py
backend_old/configs/: settings.py
frontend/: AGENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/api/: useChatWebsocket.ts  useWebsocket.ts
frontend/app/: layout.tsx  page.module.css  page.tsx
frontend/components/: MicrophoneVisualizer.tsx  VolumeCircle.tsx
frontend/contexts/: ChatContext.tsx
frontend/hooks/: useAudioLevel.ts  useChatMicrophone.ts
frontend/permissions/: useMicrophone.ts
frontend/theme/: colors.ts
(+70 files in other folders)
