[package]
name = "automation"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
cpal = "0.15"
hound = "3.5"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
bytemuck = "1"

[build-dependencies]
cc = "1.0"
